# POLDER

./: .gitignore  CMakeLists.txt  README.md  README.txt  algorithm.html  compiler.html  evaluation.html  functional.html  genindex.html  gray.html  index.html  iterator.html  math.cmath.html  math.constants.html  math.distnorm.html  math.factorial.html  math.formula.html  math.html  math.norm.html  objects.inv  polymorphic.html  py-modindex.html  search.html  searchindex.js
_sources/: algorithm.txt  compiler.txt  evaluation.txt  functional.txt  gray.txt  index.txt  math.cmath.txt  math.constants.txt  math.distnorm.txt  math.factorial.txt  math.formula.txt  math.norm.txt  math.txt  polymorphic.txt
_static/: default.css
cmake/: set_cxx_norm.cmake
doc/source/: algorithm.rst  conf.py  evaluation.rst  gray.rst  index.rst  iterator.rst  math.constants.rst  math.formula.rst
examples/: contract.cpp  functional.cpp  geometry.cpp  ini.cpp  inifiles.cpp  io.cpp  io_example.txt  itertools.cpp  memoization.cpp  path.cpp  polymorphic-default.cpp  polymorphic.cpp  recursion.cpp  test1.ini  test2.ini  type_list.cpp
include/: evaluate.h  geometry_2d.h  geometry_3d.h  geometry_4d.h  ini.h  math.h  matrix.h  path.h  ptype.h  recursion_array.h  singleton.h  string.h  types.h
include/POLDER/: algorithm.h  algorithm.inl  compiler.h  config.h  contract.h  evaluate.h  evaluation.h  exceptions.h  functional.h  geo2d.h  geo3d.h  geometry.h  gray.h  gray.inl  index.h  index.inl  ini.h  io.h  io.inl  iterator.h  itertools.h  itertools.inl  math.h  matrix.h  matrix.inl  memoization.h  memoization.inl  object.h  path.h  path.inl  ptype.h  rational.h  rational.inl  recursion_array.h  recursion_array.inl  reference_counted.h  semisymbolic.h  singleton.h  string.h  stype.h  (+4 more)
include/POLDER/details/: algorithm.inl  compiler.inl  config.h  functional.inl  gray.inl  index.inl  io.inl  iterator.inl  itertools.inl  matrix.inl  memoization.inl  path.inl  rational.inl  recursion_array.inl  utility.inl  wrapper.h
include/POLDER/evaluation/: callback.h  error.h  evaluator.h  functions.h  operation.h  operator.h  token.h
include/POLDER/evaluation/details/: callback.inl  evaluator.inl  functions.inl  operation.inl  token.inl
include/POLDER/geometry/: direction.h  direction.inl  distance.h  distance.inl  hypersphere.h  hypersphere.inl  intersection.h  intersection.inl  intersects.h  limits.h  line.h  line.inl  point.h  point.inl  types.h  vector.h  vector.inl
include/POLDER/geometry/details/: direction.inl  distance.inl  hypersphere.inl  intersection.inl  intersects.inl  line.inl  point.inl  types.h  vector.inl  vector_base.h  vector_base.inl
include/POLDER/ini/: dialect.h  element.h  error.h  parser.h
include/POLDER/ini/details/: ini.def  token.h
include/POLDER/iterator/: get_iterator.h  indirect_iterator.h  range_access.h  stride_iterator.h  transform_iterator.h
include/POLDER/iterator/details/: range_access.inl  stride_iterator.inl  transform_iterator.inl
include/POLDER/math/: cmath.h  constants.h  distnorm.h  factorial.h  factorial.inl  formula.h  formula.inl  norm.h
include/POLDER/math/details/: cmath.inl  cmath_base.h  factorial.inl  formula.inl
include/POLDER/matrix/: base.h  base.inl
include/POLDER/polymorphic/: default_adapter.h  vector.h
include/POLDER/polymorphic/details/: vector.inl
include/POLDER/semisymbolic/: constant.h  expression.h  number.h
include/POLDER/semisymbolic/details/: constant.inl  constant_cmath.h  expression.inl  number.inl  parse.h
include/geo/: direction.h  hypersphere.h  limits.h  line.h  point.h  vector.h
sources/: math.formula.txt  math.txt
src/: evaluate.cpp  geometry_2d.cpp  geometry_3d.cpp  geometry_4d.cpp  ini.cpp  math.cpp  matrix.cpp  path.cpp  ptype.cpp  string.cpp
src/POLDER/: evaluate.cpp  exceptions.cpp  ini.cpp  io.cpp  math.cpp  matrix.cpp  object.cpp  path.cpp  ptype.cpp  reference_counted.cpp  string.cpp  stype.cpp
src/POLDER/evaluation/: error.cpp  operator.cpp
src/POLDER/geometry/: limits.cpp
src/POLDER/ini/: dialect.cpp  element.cpp  error.cpp  parser.cpp
src/POLDER/ini/details/: token.cpp
src/POLDER/math/: factorial.cpp  formula.cpp
src/geo/: limits.cpp
test/: algorithm.cpp  gray.cpp  iterator.cpp  matrix.cpp  rational.cpp  type_traits.cpp  utility.cpp
test/geometry/: direction.cpp  distance.cpp  hypersphere.cpp  intersection.cpp  line.cpp  point.cpp  vector.cpp
test/ini/: dialect.cpp  element.cpp
test/math/: cmath.cpp  formula.cpp
test/semisymbolic/: constant.cpp  number.cpp
testsuite/: CMakeLists.txt  README.md  algorithm.cpp  catch.hpp  evaluate.cpp  evaluation.cpp  gray.cpp  iterator.cpp  main.cpp  matrix.cpp  rational.cpp  type_traits.cpp  utility.cpp
testsuite/geometry/: direction.cpp  distance.cpp  hypersphere.cpp  intersects.cpp  line.cpp  point.cpp  vector.cpp
testsuite/ini/: dialect.cpp  element.cpp
testsuite/math/: cmath.cpp  formula.cpp
testsuite/polymorphic/: shapes.h  vector.cpp
testsuite/semisymbolic/: constant.cpp  number.cpp
tools/: build_all.bat  build_all.sh
